fix(gladiatrool): ignore archived dump encodings